<resources>
    <string name="app_name">Race Meeting</string>
    <string name="app_name_edit">Edit Meeting</string>
    <string name="app_name_new">New Meeting</string>
    <string name="app_name_copy">Copy Meeting</string>
    <string name="app_name_review">Review Meeting</string>

    <!-- Menu -->
    <string name="lbl_menu_insert">Add a meeting</string>
    <string name="lbl_menu_settings">Settings</string>

    <!-- Notification Bar (TBA) -->
    <!--<string name="notify_upcoming_meeting_message">A race meeting is nearing start time.</string>
    <string name="notify_upcoming_meeting_title">Meeting Reminder</string>
    <string name="notify_upcoming_meeting_reminder">Meeting reminder!</string>-->

    <!-- Preferences. -->
    <string name="pref_show_meeting_key">show_meeting_pref_key</string>
    <string name="pref_show_meeting_title">Meetings To Show</string>
    <string name="pref_show_meeting_summary">Determine which meetings to show.</string>
    <string name="pref_show_meeting_all">Show all</string>
    <string name="pref_show_meeting_today">Show only today</string>
    <string name="pref_show_meeting_include_date">Include date</string>

    <string name="pref_time_format_key">time_format_pref_key</string>
    <string name="pref_time_format_title">Default Time Format</string>
    <string name="pref_time_format_summary">Set the meeting time format as 24HR.</string>
    <string name="pref_time_format_default">1</string>

    <string name="pref_default_race_code_key">default_race_code_pref_key</string>
    <string name="pref_default_race_code_title">Default Race Code</string>
    <string name="pref_default_race_code_summary">Sets the default race code.</string>

    <string name="pref_cat_meeting_general_title">Meeting General</string>
    <string name="pref_cat_notify_actions_title">Meeting Notification Actions</string>
    <string name="pref_cat_display_actions_title">Meeting Display Actions</string>

    <string name="pref_notification_enable_key">notification_enable_key</string>
    <string name="pref_notification_enable_title">Meeting Notifications</string>
    <string name="pref_notification_enable_summary">Enable meeting notifications.</string>

    <string name="pref_reminder_key">reminder_pref_key</string>
    <string name="pref_reminder_title">Meeting Reminder Time</string>
    <string name="pref_reminder_summary">Set a reminder notification before the meeting.</string>
    <string name="pref_reminder_default">3</string>

    <string name="pref_notification_key">notification_key</string>
    <string name="pref_notification_title">Meeting Notification Options</string>
    <string name="pref_notification_summary">Set meeting reminder notification options.</string>
    <string name="pref_play_default_sound">Play default sound</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrations">Vibrations</string>

    <string name="pref_time_past_key">time_past_key</string>
    <string name="pref_time_past_title">Meeting Past Race Time</string>
    <string name="pref_time_past_summary">Highlight meetings that are past race time.</string>
    <string name="pref_time_past_default">0</string>

    <!-- Generic (button text) -->
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_edit">Edit</string>

    <!-- Edit Fragment field labels. -->
    <string name="lbl_city_code">City Code:</string>
    <string name="lbl_race_code">Race Code:</string>
    <string name="lbl_race_no">Race No:</string>
    <string name="lbl_race_sel">Race Sel:</string>
    <string name="lbl_race_time">Race Time:</string>
    <string name="error_path">Unable to update RaceMeeting; path=</string>
    <string name="error_multi_rows">Unable to update RaceMeeting: more than one rows match rowId: </string>

    <!-- ** Fragments ** -->
    <!-- City Codes -->
    <string name="lbl_sel_city_code">Select City Code</string>
    <string name="lbl_sel_city_code_msg">Please select a City Code.</string>   <!-- Toast -->
    <string name="cc_A">A</string>
    <string name="cc_B">B</string>
    <string name="cc_C">C</string>
    <string name="cc_D">D</string>
    <string name="cc_E">E</string>
    <string name="cc_F">F</string>
    <string name="cc_I">I</string>
    <string name="cc_L">L</string>
    <string name="cc_M">M</string>
    <string name="cc_N">N</string>
    <string name="cc_O">O</string>
    <string name="cc_P">P</string>
    <string name="cc_Q">Q</string>
    <string name="cc_S">S</string>
    <string name="cc_T">T</string>
    <string name="cc_V">V</string>
    <string name="cc_X">X</string>
    <string name="cc_Z">Z</string>

    <!-- Race Codes -->
    <string name="lbl_sel_race_code">Select Race Code</string>
    <string name="lbl_sel_race_code_msg">Please select a Race Code.</string>   <!-- Toast -->
    <string name="rc_R">R</string>
    <string name="rc_T">T</string>
    <string name="rc_G">G</string>
    <string name="rc_S">S</string>

    <!-- Dialog Delete -->
    <string name="lbl_delete_dialog_title">Delete Meeting</string>

    <!-- Meeting keyboard. -->
    <string name="lbl_value_required">A value is required.</string>  <!-- Toast -->

    <!-- Other -->
    <string name="invalid_orientation">Invalid orientation.</string>

    <!-- ListingService exception. -->
    <string name="listing_service_exception">Unable to pass the ListingService object back to the MainFragment.</string>

    <!-- NotifyService exception. -->
    <string name="notify_service_exception">Unable to pass the NotifyService object back to the MainFragment.</string>

    <!-- Misc -->
    <string name="hour">hour</string>
    <string name="mins">mins</string>
    <string name="fragment_id">dialog_id</string>;
    <string name="dialog_btn_val">dialog_btn_val</string>
    <string name="city_codes_fragment_tag">city_codes_fragment_tag</string>
    <string name="race_codes_fragment_tag">race_codes_fragment_tag</string>
    <string name="time_picker_tag">time_picker_tag</string>
    <string name="delete_dialog_row_id">delete_dialog_row_id</string>
    <string name="time_format">time_format</string>
    <string name="time_format_12hr">hh:mm aa</string>
    <string name="time_format_24hr">kk:mm</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="edit_fragment_tag">edit_fragment_tag</string>
    <string name="detail_fragment_tag">detail_fragment_tag</string>
    <string name="listing_fragment_tag">listing_fragment_tag</string>
    <string name="delete_dialog_fragment_tag">delete_dialog_fragment_tag</string>
    <string name="meeting_show_previous">P</string>
    <string name="race_code_pref_val_key">race_code_pref_val_key</string>
    <string name="race_code_pref_id_key">race_code_pref_id_key</string>
    <string name="race_code_default_val">R</string>
    <string name="race_code_none">None</string>
    <string name="race_show_meetings_pref_val_key">race_show_meetings_pref_val_key</string>
    <string name="race_show_meetings_pref_id_key">race_show_meetings_pref_id_key</string>
    <string name="race_prior_meetings_exist">previous meetings exist</string>
    <string name="race_no_meetings">0</string>
    <string name="race_show_meetings_incl_date_key">race_show_meetings_incl_date_key</string>
    <string name="race_show_meetings_default_val">Show only today</string>
    <string name="reminder_pref_key">reminder_pref_key</string>
    <string-array name="reminder_pref_labels">
        <item>No reminder</item><item>minute</item><item>minutes</item>
    </string-array>
    <string name="time_past_pref_key">time_past_pref_key</string>
    <string name="notify_enable_pref_key">notify_enable_pref_key</string>
    <string name="notify_pref_key">notify_pref_key</string>
    <string name="notify_sound_pref_key">notify_sound_pref_key</string>
    <string name="notify_vibrate_pref_key">notify_vibrate_pref_key</string>
    <string name="time_format_pref_key">time_format_pref_key</string>
    <string name="time_format_pref_12hr_key">time_format_pref_12hr_key</string>
    <string name="time_format_pref_24hr_key">time_format_pref_24hr_key</string>
    <string name="time_format_pref_12hr">12HR</string>
    <string name="time_format_pref_24hr">24HR</string>
    <string name="listing_service_handler">listing_service_handler</string>
    <string name="notify_service_handler">notify_service_handler</string>
    <string name="past_time_job_key">past_time_job_key</string>
    <string name="prior_time_job_key">prior_time_job_key</string>
    <string name="notify_required_key">notify_required_key</string>
    <string name="notify_content_title">Racemeeting nearing start time.</string>
    <string name="edit_existing_or_copy">edit_existing_or_copy</string>
    <string name="edit_action_existing">edit_action_existing</string>
    <string name="edit_action_new">edit_action_new</string>
    <string name="edit_action_copy">edit_action_copy</string>
    <string name="show_summary">show_summary</string>

</resources>
