<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_race_codes_detail"
    style="@style/layout_fill_both"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_race_code_label"
            style="@style/text_style_base"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/lbl_sel_race_code"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorPrimary"
            android:background="?android:attr/colorBackground" />

    <RadioGroup
        android:id="@+id/rg_race_codes"
        style="@style/layout_wrap_both"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rc_R"
            style="@style/text_style_base"
            android:button="@drawable/rb_custom_select"
            android:text="@string/rc_R" />
        <RadioButton
            android:id="@+id/rc_G"
            style="@style/text_style_base"
            android:button="@drawable/rb_custom_select"
            android:text="@string/rc_G" />
        <RadioButton
            android:id="@+id/rc_T"
            style="@style/text_style_base"
            android:button="@drawable/rb_custom_select"
            android:text="@string/rc_T" />
        <RadioButton
            android:id="@+id/rc_S"
            style="@style/text_style_base"
            android:button="@drawable/rb_custom_select"
            android:text="@string/rc_S" />
    </RadioGroup>

</LinearLayout>