<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_tvDefaultSound"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_swDefaultSound"
        android:text="@string/pref_play_default_sound" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_swDefaultSound"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/id_tvDefaultSound"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:checked="false" />

    <TextView
        android:text="@string/pref_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_tvVibrate"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_swVibrate"
        app:layout_constraintLeft_toLeftOf="@+id/id_tvDefaultSound" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_swVibrate"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/id_swDefaultSound"
        android:layout_marginStart="88dp"
        app:layout_constraintLeft_toRightOf="@+id/id_tvVibrate"
        android:checked="false"/>

    <TextView
        android:text="@string/pref_vibrations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_tvVibrations"
        app:layout_constraintLeft_toLeftOf="@+id/id_tvVibrate"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toBottomOf="@+id/id_tvVibrate" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_vibrate_numberPicker"
        app:layout_constraintLeft_toLeftOf="@+id/id_swVibrate"
        app:layout_constraintTop_toBottomOf="@+id/id_swVibrate" />

</android.support.constraint.ConstraintLayout>